# oj-eval-claude-code-004-20260423003301

./: CMakeLists.txt  Makefile  book.cpp  book.h  debug_test  debug_test.cpp  log.cpp  log.h  main.cpp  system.cpp  system.h  test_adduser  test_adduser.cpp  test_output.in  test_output2.in  test_parse  test_parse.cpp  test_privilege  test_privilege.cpp  test_script.sh  test_show_finance  test_show_finance.cpp  test_simple.in  test_user  test_user.cpp  user.cpp  user.h  utils.cpp  utils.h
